Changing the structure of the repository, filled in README

--- a/Working_Notebooks/Modeling_notebook.ipynb
+++ b/Working_Notebooks/Modeling_notebook.ipynb
@@ -182,35 +182,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline = models.Sequential()\n",
+    "# baseline = models.Sequential()\n",
     "\n",
-    "# stack 1\n",
-    "baseline.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
-    "                        input_shape=(global_target_size[0], global_target_size[0],  3)))\n",
-    "baseline.add(layers.MaxPooling2D((2, 2)))\n",
+    "# # stack 1\n",
+    "# baseline.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "#                         input_shape=(global_target_size[0], global_target_size[0],  3)))\n",
+    "# baseline.add(layers.MaxPooling2D((2, 2)))\n",
     "\n",
-    "# stack 2\n",
-    "baseline.add(layers.Conv2D(32, (4, 4), activation='relu'))\n",
-    "baseline.add(layers.MaxPooling2D((2, 2)))\n",
+    "# # stack 2\n",
+    "# baseline.add(layers.Conv2D(32, (4, 4), activation='relu'))\n",
+    "# baseline.add(layers.MaxPooling2D((2, 2)))\n",
     "\n",
-    "# stack 3\n",
-    "baseline.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
-    "baseline.add(layers.MaxPooling2D((2, 2)))\n",
+    "# # stack 3\n",
+    "# baseline.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "# baseline.add(layers.MaxPooling2D((2, 2)))\n",
     "\n",
-    "# flattening layer\n",
-    "baseline.add(layers.Flatten())\n",
+    "# # flattening layer\n",
+    "# baseline.add(layers.Flatten())\n",
     "\n",
-    "# Dense Layer 1 \n",
-    "baseline.add(layers.Dense(64, activation='relu'))\n",
+    "# # Dense Layer 1 \n",
+    "# baseline.add(layers.Dense(64, activation='relu'))\n",
     "\n",
-    "# Dense Layer 2 // output layer\n",
-    "baseline.add(layers.Dense(1, activation='sigmoid'))\n",
+    "# # Dense Layer 2 // output layer\n",
+    "# baseline.add(layers.Dense(1, activation='sigmoid'))\n",
     "\n",
     "\n",
-    "## Compiling baseline \n",
-    "baseline.compile(loss='binary_crossentropy',\n",
-    "              optimizer=\"sgd\",\n",
-    "              metrics=['acc'])"
+    "# ## Compiling baseline \n",
+    "# baseline.compile(loss='binary_crossentropy',\n",
+    "#               optimizer=\"sgd\",\n",
+    "#               metrics=['acc'])"
    ]
   },
   {
@@ -316,10 +316,10 @@
     }
    ],
    "source": [
-    "baseline_history = baseline.fit(train_data,\n",
-    "                    epochs=global_epochs,\n",
-    "                    validation_data = val_data\n",
-    "                   )"
+    "# baseline_history = baseline.fit(train_data,\n",
+    "#                     epochs=global_epochs,\n",
+    "#                     validation_data = val_data\n",
+    "#                    )"
    ]
   },
   {
@@ -346,8 +346,8 @@
     }
    ],
    "source": [
-    "baseline_train_results = baseline.evaluate(train_data)\n",
-    "baseline_train_results"
+    "# baseline_train_results = baseline.evaluate(train_data)\n",
+    "# baseline_train_results"
    ]
   },
   {
@@ -374,8 +374,8 @@
     }
    ],
    "source": [
-    "baseline_val_results = baseline.evaluate(val_data)\n",
-    "baseline_val_results"
+    "# baseline_val_results = baseline.evaluate(val_data)\n",
+    "# baseline_val_results"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_dictionary['baseline'] =  (baseline_train_results,baseline_val_results)"
+    "# score_dictionary['baseline'] =  (baseline_train_results,baseline_val_results)"
    ]
   },
   {
@@ -406,20 +406,20 @@
     }
    ],
    "source": [
-    "# visualizing loss and accuracy per epoch\n",
-    "baseline_train_loss = baseline_history.history['loss']\n",
-    "baseline_train_acc = baseline_history.history['acc']\n",
-    "baseline_val_loss = baseline_history.history['val_loss']\n",
-    "baseline_val_acc = baseline_history.history['val_acc']\n",
+    "# # visualizing loss and accuracy per epoch\n",
+    "# baseline_train_loss = baseline_history.history['loss']\n",
+    "# baseline_train_acc = baseline_history.history['acc']\n",
+    "# baseline_val_loss = baseline_history.history['val_loss']\n",
+    "# baseline_val_acc = baseline_history.history['val_acc']\n",
     "\n",
     "\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "# fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 5))\n",
     "\n",
-    "sns.lineplot(x=baseline_history.epoch, y=baseline_train_loss, ax=ax1, label='training loss')\n",
-    "sns.lineplot(x=baseline_history.epoch, y=baseline_train_acc, ax=ax2, label='training accuracy')\n",
+    "# sns.lineplot(x=baseline_history.epoch, y=baseline_train_loss, ax=ax1, label='training loss')\n",
+    "# sns.lineplot(x=baseline_history.epoch, y=baseline_train_acc, ax=ax2, label='training accuracy')\n",
     "\n",
-    "sns.lineplot(x=baseline_history.epoch, y=baseline_val_loss, ax=ax1, label='validation loss')\n",
-    "sns.lineplot(x=baseline_history.epoch, y=baseline_val_acc, ax=ax2, label='validation accuracy');"
+    "# sns.lineplot(x=baseline_history.epoch, y=baseline_val_loss, ax=ax1, label='validation loss')\n",
+    "# sns.lineplot(x=baseline_history.epoch, y=baseline_val_acc, ax=ax2, label='validation accuracy');"
    ]
   },
   {
@@ -938,13 +938,7 @@
       "31/31 [==============================] - 38s 1s/step - loss: 0.4884 - acc: 0.7577 - val_loss: 0.5164 - val_acc: 0.7709\n",
       "Epoch 62/300\n",
       "31/31 [==============================] - 38s 1s/step - loss: 0.4717 - acc: 0.7690 - val_loss: 0.5185 - val_acc: 0.7430\n",
-      "Epoch 63/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 63/300\n",
       "31/31 [==============================] - 38s 1s/step - loss: 0.4695 - acc: 0.7793 - val_loss: 0.5055 - val_acc: 0.7740\n",
       "Epoch 64/300\n",
       "31/31 [==============================] - 38s 1s/step - loss: 0.4499 - acc: 0.7875 - val_loss: 0.5492 - val_acc: 0.7090\n",
