Looking at architecture for visual

--- a/Working_Notebooks/augmenting_training_data.ipynb
+++ b/Working_Notebooks/augmenting_training_data.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,13 +329,7 @@
       "19/19 [==============================] - 22s 1s/step - loss: 0.1051 - acc: 0.9553 - val_loss: 0.7758 - val_acc: 0.7371\n",
       "Epoch 62/250\n",
       "19/19 [==============================] - 22s 1s/step - loss: 0.1550 - acc: 0.9381 - val_loss: 0.4567 - val_acc: 0.8608\n",
-      "Epoch 63/250\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 63/250\n",
       "19/19 [==============================] - 22s 1s/step - loss: 0.0953 - acc: 0.9674 - val_loss: 0.3938 - val_acc: 0.8660\n",
       "Epoch 64/250\n",
       "19/19 [==============================] - 22s 1s/step - loss: 0.1092 - acc: 0.9639 - val_loss: 0.4282 - val_acc: 0.8454\n",
@@ -587,13 +581,7 @@
       "19/19 [==============================] - 22s 1s/step - loss: 0.0512 - acc: 0.9794 - val_loss: 0.4618 - val_acc: 0.8711\n",
       "Epoch 185/250\n",
       "19/19 [==============================] - 23s 1s/step - loss: 0.0709 - acc: 0.9759 - val_loss: 0.3699 - val_acc: 0.8969\n",
-      "Epoch 186/250\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 186/250\n",
       "19/19 [==============================] - 22s 1s/step - loss: 0.0166 - acc: 0.9948 - val_loss: 0.5092 - val_acc: 0.8866\n",
       "Epoch 187/250\n",
       "19/19 [==============================] - 22s 1s/step - loss: 0.0288 - acc: 0.9914 - val_loss: 0.9431 - val_acc: 0.8866\n",
@@ -737,6 +725,68 @@
     "                    epochs=global_epochs,\n",
     "                    validation_data = val_data\n",
     "                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 127, 127, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 32, 32, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 32, 32, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 32, 32, 32)        18464     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 16, 16, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 16, 16, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 13, 13, 64)        32832     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 7, 7, 128)         73856     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 4, 4, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 4, 4, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 4, 4, 128)         262272    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_4 (MaxPooling2 (None, 2, 2, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 2, 2, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 2, 2, 256)         524544    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_5 (MaxPooling2 (None, 1, 1, 256)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 256)               0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 64)                16448     \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1)                 65        \n",
+      "=================================================================\n",
+      "Total params: 930,273\n",
+      "Trainable params: 930,273\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model18.summary()"
    ]
   },
   {
