Made changes to wording in notebook. Created a directory in README.

--- a/Final_Notebook.ipynb
+++ b/Final_Notebook.ipynb
@@ -61,11 +61,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Schools need assurance that their students will be kept safe while at school. Children should not have to worry about being a victim of gun violence while they are at school. School should not be a place of fear. It should be a place of nurturing, learning and growing. To combat this fear that many have, I have created an image classification model that will differentiate common handheld objects and guns. This will make it easier for a school to recognize a threat and react accordingly. \n",
+    "Schools need assurance that their students will be kept safe while at school. Children should not have to worry about being a victim of gun violence while they are at school. School should not be a place of fear. It should be a place of nurturing, learning and growing. To combat this fear that many have, I have created an image classification model that will differentiate common handheld objects and guns. This will make it easier for a school to recognize a threat and react accordingly. This presentation is directed at the city of Buffalo's Department of Safety. \n",
     "\n",
-    "It could even trigger some sort of alarm or at least a call to the police. This can be used as a first line of defense against mass shooters. However, this should not be the only sort of defense. This is simply a tool that can quickly and  efficiently classify a gun vs other handheld objects. The main point of this system is to save time, and to get help to the area sooner in hopes to mitigate any potential damage.\n",
+    "This model could trigger some sort of alarm or at least a call to the police. This can be used as a first line of defense against mass shooters. However, this should not be the only sort of defense. This is simply a tool that can quickly and  efficiently classify a gun vs other handheld objects. The main point of this system is to save time, and to get help to the area sooner in hopes to mitigate any potential damage.\n",
     "\n",
-    "Note: Though this model is directed towards public school districts, it is not limited to schools. I would like to see it implemented in all public spaces like grocery stores, government buildings, banks, shopping malls, places of worship, and many more.\n",
+    "Note: Though this model is directed towards Buffalo's Department of Safety for implementation in schools, it is not limited to schools. I would like to see it implemented in all public spaces like grocery stores, government buildings, banks, shopping malls, places of worship, and many more.\n",
     "\n",
     "***"
    ]
@@ -3080,13 +3080,6 @@
     "labels = test_data.labels\n",
     "print(labels)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
