Ensuring visuals were saved

--- a/Visuals/visual_creation.ipynb
+++ b/Visuals/visual_creation.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,10 +94,10 @@
     "                   textcoords='offset points')\n",
     "\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show();\n",
+    "plt.show()\n",
     "\n",
     "fig = plots.get_figure()\n",
-    "fig.savefig(\"iterative_modeling.png\",bbox_inches='tight',transparent = True)"
+    "fig.savefig(\"iterative_modeling.png\",bbox_inches='tight',transparent = True);"
    ]
   },
   {
