Commenting out unneeded parts

--- a/Working_Notebooks/more_augmenting.ipynb
+++ b/Working_Notebooks/more_augmenting.ipynb
@@ -340,13 +340,7 @@
       "31/31 [==============================] - 74s 2s/step - loss: 0.0789 - acc: 0.9764 - val_loss: 0.5932 - val_acc: 0.8266\n",
       "Epoch 62/150\n",
       "31/31 [==============================] - 72s 2s/step - loss: 0.0595 - acc: 0.9795 - val_loss: 1.0432 - val_acc: 0.7740\n",
-      "Epoch 63/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 63/150\n",
       "31/31 [==============================] - 73s 2s/step - loss: 0.1027 - acc: 0.9641 - val_loss: 0.8170 - val_acc: 0.7988\n",
       "Epoch 64/150\n",
       "31/31 [==============================] - 73s 2s/step - loss: 0.0599 - acc: 0.9815 - val_loss: 0.7019 - val_acc: 0.7864\n",
@@ -889,7 +883,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "incorrects = np.nonzero(predictions != labels)"
+    "# incorrects = np.nonzero(predictions != labels)"
    ]
   },
   {
@@ -913,7 +907,7 @@
     }
    ],
    "source": [
-    "incorrects"
+    "# incorrects"
    ]
   },
   {
@@ -1369,8 +1363,8 @@
     }
    ],
    "source": [
-    "for index in incorrects[0]:\n",
-    "    display(array_to_img(test_data_viz[0][0][index]))"
+    "# for index in incorrects[0]:\n",
+    "#     display(array_to_img(test_data_viz[0][0][index]))"
    ]
   },
   {
@@ -1379,7 +1373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corrects = np.nonzero(predictions == labels)"
+    "# corrects = np.nonzero(predictions == labels)"
    ]
   },
   {
@@ -1388,7 +1382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corrects"
+    "# corrects"
    ]
   },
   {
@@ -1397,8 +1391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index in corrects[0]:\n",
-    "    display(array_to_img(test_data_viz[0][0][index]))"
+    "# for index in corrects[0]:\n",
+    "#     display(array_to_img(test_data_viz[0][0][index]))"
    ]
   }
  ],
