--- a/Visuals/visual_creation.ipynb
+++ b/Visuals/visual_creation.ipynb
@@ -98,7 +98,7 @@
     "plt.show()\n",
     "\n",
     "fig = plots.get_figure()\n",
-    "fig.savefig(\"iterative_modeling.png\",bbox_inches='tight',transparent = True);"
+    "#fig.savefig(\"iterative_modeling.png\",bbox_inches='tight',transparent = True);"
    ]
   },
   {
