Adding environment to github

--- a/Final_Notebook.ipynb
+++ b/Final_Notebook.ipynb
@@ -90,6 +90,9 @@
     "\n",
     "[All Weapon Detection Data](https://dasci.es/transferencia/open-data/24705/)\n",
     "\n",
+    "\n",
+    "For reproducability purposes, I have the environment I did all my work in listed in my repository under **environment.yml**.\n",
+    "\n",
     "***"
    ]
   },
@@ -2984,13 +2987,7 @@
       "31/31 [==============================] - 53s 2s/step - loss: 0.0917 - acc: 0.9661 - val_loss: 0.6185 - val_acc: 0.7957\n",
       "Epoch 62/150\n",
       "31/31 [==============================] - 53s 2s/step - loss: 0.0730 - acc: 0.9733 - val_loss: 0.6045 - val_acc: 0.7957\n",
-      "Epoch 63/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 63/150\n",
       "31/31 [==============================] - 52s 2s/step - loss: 0.0751 - acc: 0.9733 - val_loss: 0.8981 - val_acc: 0.7647\n",
       "Epoch 64/150\n",
       "31/31 [==============================] - 52s 2s/step - loss: 0.0683 - acc: 0.9671 - val_loss: 0.7168 - val_acc: 0.8235\n",
