--- a/Final_Notebook.ipynb
+++ b/Final_Notebook.ipynb
@@ -3581,6 +3581,7 @@
     "\n",
     "Ultimately, I want this model to be used on video surveillance, however, my model will not be able to generalize or even understand those types of images if that's not the type of data it is trained on. So for future projects, I want to collect surveillance camera data that is more aligned with my goal and that is cohesive in structure.\n",
     "\n",
+    "Another issue my model ran into was merging the background and foreground of an image when they should have been kept seperate. In the future I will explore changing contrast of the images to see if it will make it easier for my model to differentiate the foreground from the background.\n",
     "\n",
     "<u> **Computational Power Limitations** </u>\n",
     "Since I am working from a laptop, my computational power is limited. Because of this, I didn't go as far with my computational exploration as I would have liked. If I had more computational power, I probably would have tried some larger Convolutional Neural Network Architectures. Since some of my images are on the larger end, I probably would have also increased the resolution in order for my model to potentially pick up more information in my data. \n",
@@ -3596,7 +3597,9 @@
     "<u> **Changing Data** </u>\n",
     "For future exploration, I would like to try using different types of data. I would love to learn how to analyze video data to attempt to be able to detect a threat in real time.\n",
     "\n",
-    "I would also like to learn about how data affects these models. I would imagine they impact the model a lot, but what I want to explore is finding out how much variation in data can these Neural Networks take before the variety is too high to make meaningful conclusions / gain insight from the data. \n",
+    "I would also like to learn about how data affects these models. I would imagine they impact the model a lot, but what I want to explore is finding out how much variation in data can these Neural Networks take before the variety is too high to make meaningful conclusions / gain insight from the data.\n",
+    "\n",
+    "I also have an interest in augmenting the data I already have in hopes that this will help the model discern the foreground from the background.\n",
     "\n",
     "<u> **Expanding Model Capacity** </u>\n",
     "In the future, I would love to expand upon my current neural network architectures. I would like to see the capacity of Convolutional Neural Networks on different types of images and different subjects of images as well.\n",
